<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView

            android:id="@+id/welcome_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="@color/app_color"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView


            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:id="@+id/img_logo"
            android:layout_width="169dp"
            android:layout_height="169dp"
            android:contentDescription="@string/app_name2"
            app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/disclaimer_msg"
        android:textColor="@color/app_color" />


        <LinearLayout
            android_layout_marginStart="5dp"
            android_layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/tv_accept_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/privacy_policy_msg"
                android:textColor="@color/app_color" />

        </LinearLayout>

    </LinearLayout>
    <TextView

        android:id="@+id/btnAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:padding="13dp"
        android:gravity="center"
        android:text="@string/privacy_policy_button"
        android:background="@drawable/button_bg2"
        android:textColor="@color/white"

        android:layout_alignParentBottom="true"
        />

</RelativeLayout>